# vultr-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  openapi.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/vultr-api/: Cargo.toml
crates/vultr-api/src/: client.rs  wait.rs
crates/vultr-cli/: Cargo.toml
crates/vultr-cli/src/: main.rs
crates/vultr-cli/src/commands/: mod.rs
crates/vultr-cli/src/handlers/: account.rs  application.rs  auth.rs  backup.rs  bare_metal.rs  billing.rs  block_storage.rs  cdn.rs  config.rs  database.rs  dns.rs  firewall.rs  inference.rs  instance.rs  iso.rs  kubernetes.rs  load_balancer.rs  log.rs  mod.rs  network.rs  object_storage.rs  reference.rs  registry.rs  reserved_ip.rs  snapshot.rs  ssh_key.rs  startup_script.rs  storage_gateway.rs  subaccount.rs  user.rs  vfs.rs  vpc.rs  vpc2.rs
crates/vultr-config/: Cargo.toml
crates/vultr-config/src/: error.rs  lib.rs
crates/vultr-models/: Cargo.toml
crates/vultr-models/src/: account.rs  application.rs  backup.rs  bare_metal.rs  billing.rs  block_storage.rs  cdn.rs  common.rs  database.rs  dns.rs  firewall.rs  inference.rs  instance.rs  iso.rs  kubernetes.rs  load_balancer.rs  log.rs  network.rs  object_storage.rs  registry.rs  reserved_ip.rs  snapshot.rs  ssh_key.rs  startup_script.rs  storage_gateway.rs  subaccount.rs  user.rs  vfs.rs  vpc.rs
crates/vultr-models/tests/: openapi_coverage.rs
crates/vultr-output/: Cargo.toml
crates/vultr-output/src/: lib.rs
src/: error.rs  main.rs
src/api/: client.rs  mod.rs  wait.rs
src/commands/: mod.rs
src/config/: mod.rs
src/handlers/: account.rs  application.rs  auth.rs  backup.rs  bare_metal.rs  billing.rs  block_storage.rs  cdn.rs  config.rs  database.rs  dns.rs  firewall.rs  inference.rs  instance.rs  iso.rs  kubernetes.rs  load_balancer.rs  log.rs  mod.rs  network.rs  object_storage.rs  reference.rs  registry.rs  reserved_ip.rs  snapshot.rs  ssh_key.rs  startup_script.rs  storage_gateway.rs  subaccount.rs  user.rs  vfs.rs  vpc.rs  vpc2.rs
src/models/: account.rs  application.rs  backup.rs  bare_metal.rs  billing.rs  block_storage.rs  cdn.rs  common.rs  database.rs  dns.rs  firewall.rs  instance.rs  iso.rs  kubernetes.rs  log.rs  mod.rs  network.rs  object_storage.rs  registry.rs  reserved_ip.rs  snapshot.rs  ssh_key.rs  startup_script.rs  storage_gateway.rs  subaccount.rs  user.rs  vpc.rs
src/output/: mod.rs
tests/: openapi_coverage.rs
